unpackaged/main/default/objects/surveys__c/fields/X10_Notes__c.field-meta.xml
<CustomField>
    <fullName>X10_Notes__c</fullName>
    <label>10% Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>