unpackaged/main/default/objects/surveys__c/fields/X10_PO_Review__c.field-meta.xml
<CustomField>
    <fullName>X10_PO_Review__c</fullName>
    <label>10% PO Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>