unpackaged/main/default/objects/surveys__c/fields/X10_Quality_Policy__c.field-meta.xml
<CustomField>
    <fullName>X10_Quality_Policy__c</fullName>
    <label>10% Quality Policy?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>