unpackaged/main/default/objects/surveys__c/fields/X1123_Kacey_Fix__c.field-meta.xml
<CustomField>
    <fullName>X1123_Kacey_Fix__c</fullName>
    <label>11/23 Kacey Fix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>