unpackaged/main/default/objects/surveys__c/fields/X5_Axis_Machine__c.field-meta.xml
<CustomField>
    <fullName>X5_Axis_Machine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>5-Axis Machine</label>
    <type>Checkbox</type>
</CustomField>