unpackaged/main/default/objects/surveys__c/fields/X60_Day_Rolling_Timeliness_COMING_SOON__c.field-meta.xml
<CustomField>
    <fullName>X60_Day_Rolling_Timeliness_COMING_SOON__c</fullName>
    <label>60 Day Rolling Timeliness (COMING SOON)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>