unpackaged/main/default/objects/surveys__c/fields/Years_of_Exp__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Exp__c</fullName>
    <label>Years of Exp</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>