unpackaged/main/default/objects/surveys__c/fields/Your_part_is_only_as_good_as_your__c.field-meta.xml
<CustomField>
    <fullName>Your_part_is_only_as_good_as_your__c</fullName>
    <label>Your part is only as good as your______?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>