unpackaged/main/default/objects/surveys__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>ERP_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>